feat(product): add image to carrousel home page

--- a/resources/sass/_bases.scss
+++ b/resources/sass/_bases.scss
@@ -38,15 +38,15 @@ a:hover {
 
 .step-buy-img {
   height: 300px;
-  background: center / cover no-repeat url(../images/1.jpg);
+  background: center / cover no-repeat url(https://res.cloudinary.com/dh2bqrjaj/image/upload/v1606483205/step_1.jpg);
 }
 
 .step-buy-img-2 {
-  background-image: url(../images/2.jpg);
+  background-image: url(https://res.cloudinary.com/dh2bqrjaj/image/upload/v1606483205/step_2.jpg);
 }
 
 .step-buy-img-3 {
-  background-image: url(../images/3.jpg);
+  background-image: url(https://res.cloudinary.com/dh2bqrjaj/image/upload/v1606483205/step_3.jpg);
 }
 
 @media only screen and (min-width: 900px) {
