--- a/public/css/app.css
+++ b/public/css/app.css
@@ -35,15 +35,15 @@ a:hover {
 
 .step-buy-img {
   height: 300px;
-  background: center/cover no-repeat url(/images/1.jpg?88dbcd09bd4a3a7f576b4b78340c06c8);
+  background: center/cover no-repeat url(https://res.cloudinary.com/dh2bqrjaj/image/upload/v1606483205/step_1.jpg);
 }
 
 .step-buy-img-2 {
-  background-image: url(/images/2.jpg?7ac329b546d38c7503ad2daf084cc4a5);
+  background-image: url(https://res.cloudinary.com/dh2bqrjaj/image/upload/v1606483205/step_2.jpg);
 }
 
 .step-buy-img-3 {
-  background-image: url(/images/3.jpg?a2b3b02e3b8db2aa2bb094ecfd47c0c3);
+  background-image: url(https://res.cloudinary.com/dh2bqrjaj/image/upload/v1606483205/step_3.jpg);
 }
 
 @media only screen and (min-width: 900px) {
