--- a/public/css/app.css
+++ b/public/css/app.css
@@ -22,15 +22,15 @@ a:hover {
 }
 
 .category {
-  border: 5px solid #AAAAAA;
-  background-color: #AAAAAA;
+  border: 5px solid #2c3e50;
+  background-color: #2c3e50;
   transition: 0.3s;
 }
 
 .category:hover {
   background: transparent;
-  color: #AAAAAA;
-  border: 5px solid #AAAAAA;
+  color: #2c3e50;
+  border: 5px solid #2c3e50;
 }
 
 .step-buy-img {
