--- a/resources/sass/_bases.scss
+++ b/resources/sass/_bases.scss
@@ -1,3 +1,4 @@
+// bases
 a {
   color: inherit;
 }
@@ -25,15 +26,15 @@ a:hover {
 }
 
 .category {
-  border: 5px solid #AAAAAA;
-  background-color: #AAAAAA;
+  border: 5px solid #2c3e50;
+  background-color: #2c3e50;
   transition: .3s;
 }
 
 .category:hover {
   background: transparent;
-  color: #AAAAAA;
-  border: 5px solid #AAAAAA;
+  color: #2c3e50;
+  border: 5px solid #2c3e50;
 }
 
 .step-buy-img {
