--- a/resources/sass/_bases.scss
+++ b/resources/sass/_bases.scss
@@ -21,7 +21,7 @@ a:hover {
 
 .categories {
   display: grid;
-  grid-template-columns: 1fr 1fr 1fr;
+  grid-template-columns: 1fr 1fr;
   grid-gap: 20px;
 }
 
@@ -50,10 +50,14 @@ a:hover {
   background-image: url(https://res.cloudinary.com/dh2bqrjaj/image/upload/v1606483205/step_3.jpg);
 }
 
+@media only screen and (min-width: 500px) {
+  .categories {
+    grid-template-columns: 1fr 1fr 1fr;
+  }
+}
+
 @media only screen and (min-width: 900px) {
   .categories {
-    display: grid;
     grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr;
-    grid-gap: 20px;
   }
 }
